[gd_scene load_steps=38 format=3 uid="uid://dm2njwnc0fiqh"]

[ext_resource type="Script" path="res://Obstacles/Rock Head/Rock Head.gd" id="1_8w6r8"]
[ext_resource type="Texture2D" uid="uid://cv2igbr2wbnc1" path="res://Free/Traps/Rock Head/Idle .png" id="2_3een7"]
[ext_resource type="Texture2D" uid="uid://corcfwjmrwhy3" path="res://Free/Traps/Rock Head/Blink(42x42).png" id="2_g3cso"]
[ext_resource type="Texture2D" uid="uid://ba1m17ic5atrs" path="res://Free/Traps/Rock Head/Bottom Hit(42x42).png" id="3_5qy3q"]
[ext_resource type="Texture2D" uid="uid://rttreyla2jfk" path="res://Free/Traps/Rock Head/Left Hit(42x42).png" id="4_y3sdy"]
[ext_resource type="Texture2D" uid="uid://dp262s72bcyxp" path="res://Free/Traps/Rock Head/Right Hit(42x42).png" id="5_pe2jc"]
[ext_resource type="Texture2D" uid="uid://didjr4nhap610" path="res://Free/Traps/Rock Head/Top Hit(42x42).png" id="6_idr5a"]
[ext_resource type="AudioStream" uid="uid://vwjpmk6b4n5n" path="res://Free/Audio/Sound Effects/rockheadhit.wav" id="8_ob3xd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rknkr"]
atlas = ExtResource("2_g3cso")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iqv4"]
atlas = ExtResource("2_g3cso")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_p60nr"]
atlas = ExtResource("2_g3cso")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd5w2"]
atlas = ExtResource("2_g3cso")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsf4m"]
atlas = ExtResource("3_5qy3q")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u1ay"]
atlas = ExtResource("3_5qy3q")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebqpr"]
atlas = ExtResource("3_5qy3q")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqnws"]
atlas = ExtResource("3_5qy3q")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_lydj4"]
atlas = ExtResource("4_y3sdy")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_an40g"]
atlas = ExtResource("4_y3sdy")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_exrod"]
atlas = ExtResource("4_y3sdy")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n543"]
atlas = ExtResource("4_y3sdy")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_4trml"]
atlas = ExtResource("5_pe2jc")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_in4g1"]
atlas = ExtResource("5_pe2jc")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6vl1"]
atlas = ExtResource("5_pe2jc")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_3agss"]
atlas = ExtResource("5_pe2jc")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj805"]
atlas = ExtResource("6_idr5a")
region = Rect2(0, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_13d41"]
atlas = ExtResource("6_idr5a")
region = Rect2(42, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iig0"]
atlas = ExtResource("6_idr5a")
region = Rect2(84, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2kxb"]
atlas = ExtResource("6_idr5a")
region = Rect2(126, 0, 42, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0ufn"]
atlas = ExtResource("2_3een7")
region = Rect2(0, 0, 42, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_8sbyb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rknkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iqv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p60nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd5w2")
}],
"loop": false,
"name": &"blink",
"speed": 20.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_hsf4m")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_7u1ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebqpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqnws")
}],
"loop": false,
"name": &"hit bottom",
"speed": 20.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_lydj4")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_an40g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exrod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n543")
}],
"loop": false,
"name": &"hit left",
"speed": 20.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_4trml")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_in4g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6vl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3agss")
}],
"loop": false,
"name": &"hit right",
"speed": 20.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_aj805")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_13d41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iig0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2kxb")
}],
"loop": false,
"name": &"hit top",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0ufn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwl31"]
size = Vector2(76, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gl0a"]
size = Vector2(74, 8)

[sub_resource type="Animation" id="Animation_g5bsi"]
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RockHeadPath:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AreaDetectPosition/PlayerDetect:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatableBody2D/Death:monitorable")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wa6cx"]
resource_name = "climb"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RockHeadPath:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatableBody2D/AnimatedSprite2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"idle", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimationPlayer:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AreaDetectPosition/PlayerDetect:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatableBody2D/Death:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "audio"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AudioStreamPlayer2D")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_ob3xd")
}],
"times": PackedFloat32Array(0)
}
tracks/5/use_blend = true

[sub_resource type="Animation" id="Animation_y2odb"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RockHeadPath:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"climb", -1, 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AreaDetectPosition/PlayerDetect:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_play_animation"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatableBody2D/Death:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8lgny"]
_data = {
"RESET": SubResource("Animation_g5bsi"),
"climb": SubResource("Animation_wa6cx"),
"fall": SubResource("Animation_y2odb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5yyv2"]
size = Vector2(24, 86)

[node name="RockHead" type="Path2D"]
texture_filter = 1
script = ExtResource("1_8w6r8")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
collision_layer = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimatableBody2D"]
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_8sbyb")
animation = &"hit top"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
shape = SubResource("RectangleShape2D_fwl31")

[node name="Death" type="Area2D" parent="AnimatableBody2D" groups=["Death"]]
position = Vector2(0, 36)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D/Death"]
shape = SubResource("RectangleShape2D_7gl0a")

[node name="RockHeadPath" type="PathFollow2D" parent="."]
rotates = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="RockHeadPath"]
remote_path = NodePath("../../AnimatableBody2D")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8lgny")
}

[node name="AreaDetectPosition" type="PathFollow2D" parent="."]
rotates = false
loop = false

[node name="PlayerDetect" type="Area2D" parent="AreaDetectPosition"]
monitorable = false

[node name="DetectionShape" type="CollisionShape2D" parent="AreaDetectPosition/PlayerDetect"]
shape = SubResource("RectangleShape2D_5yyv2")

[connection signal="body_entered" from="AreaDetectPosition/PlayerDetect" to="." method="_on_player_detect_body_entered"]
